--- a/U4-Maquetación_Web/Corona_Carrillo_Marco_U4_T2_Layout/layout.css
+++ b/U4-Maquetación_Web/Corona_Carrillo_Marco_U4_T2_Layout/layout.css
@@ -16,6 +16,13 @@ header,footer{
     color: lightblue;
 }
 
+h1,h2{
+    margin-block-start: 0px;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 p {
 
     float: left;
@@ -29,20 +36,12 @@ p {
 h1 {
     float: left;
     font-size: 2em;
-    margin-block-start: 0px;
-    margin-block-end: 0;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
     font-weight: bold;
 }
 
 h2 {
     float: left;
     font-size: 1.5em;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
     font-weight: bold;
 
 }
