--- a/U4-Maquetación_Web/Corona_Carrillo_Marco_U4_T2_Layout/layout.css
+++ b/U4-Maquetación_Web/Corona_Carrillo_Marco_U4_T2_Layout/layout.css
@@ -128,15 +128,17 @@ header img {
 
 #twittericono{
     float: left;
+    margin-top: 5%;
 }
 
 .twit{
     margin-left: 5%;
 }
 
-.twitter{
+.twit p{
     float: left;
     width: 95%;
+    margin-top: 5%;
 }
 
 #link{
